# adda

./: .gitignore  .gitmodules  README
docker/: README
practice/xp-desktop/: CMakeLists.txt  LICENSE  build-arch.sh  dependencies-arch.sh  install-arch.sh
practice/xp-desktop/src/applications/: notepad.c
practice/xp-desktop/src/compositor/: main.c
practice/xp-desktop/src/shell/: desktop.h  start_menu.h  taskbar.h
python/gh-pyforge/: INSTRUCTIONS.md  LICENSE  README.md  app.py  main.py  pyproject.toml  requirements.txt  run.sh
python/gh-pyforge/core/: __init__.py  config.py  device.py  logger.py  scheduler.py  task_queue.py
python/gh-pyforge/engines/: __init__.py  engine_audio.py  engine_image.py  engine_llm.py  engine_speech.py  engine_video.py
python/gh-pyforge/models/: __init__.py  downloader.py  metadata.py  registry.py
python/gh-pyforge/scripts/: benchmark.py  cleanup.py  package_linux.py  package_macos.py  package_windows.py
python/gh-pyforge/ui/: __init__.py  main_window.py  theme.py
python/gh-pyforge/ui/components/: __init__.py  history_panel.py  model_selector.py  output_viewer.py  progress_bar.py  prompt_box.py
python/gh-pyforge/ui/tabs/: __init__.py  tab_audio.py  tab_image.py  tab_llm.py  tab_settings.py  tab_speech.py  tab_video.py
vibes/aurora-eda/: .gitignore  CLAUDE.md  CMakeLists.txt  CODEX.md  STATUS.md  build.bat  build.sh  build_and_run.bat
vibes/aurora-eda/.claude/: settings.local.json
vibes/aurora-eda/.github/workflows/: build.yml
vibes/aurora-eda/docs/: API_REFERENCE.md  ARCHITECTURE.md  FILE_FORMAT.md  PDK_SPEC.md
vibes/aurora-eda/python/aurora/: __init__.py  batch.py  console.py  custom_rules.py  macro.py  ui_callbacks.py
vibes/aurora-eda/src/: CMakeLists.txt
vibes/aurora-eda/src/core/: CMakeLists.txt  CoreApp.cpp  CoreApp.h  DesignServices.cpp  DesignServices.h  LibraryManager.cpp  LibraryManager.h  PluginApi.h  PluginManager.cpp  PluginManager.h  ProjectManager.cpp  ProjectManager.h  ScriptEngine.cpp  ScriptEngine.h  WorkspaceServices.cpp  WorkspaceServices.h
vibes/aurora-eda/src/db/: CMakeLists.txt  DbCell.cpp  DbCell.h  DbCellLib.cpp  DbCellLib.h  DbConstraint.cpp  DbConstraint.h  DbInstance.cpp  DbInstance.h  DbLayer.cpp  DbLayer.h  DbNet.cpp  DbNet.h  DbPin.cpp  DbPin.h  DbShape.cpp  DbShape.h  DbTypes.h  DbView.cpp  DbView.h
vibes/aurora-eda/src/drc_lvs/: CMakeLists.txt  DrcEngine.cpp  DrcEngine.h  DrcViolation.h  LvsChecker.cpp  LvsChecker.h  ParasiticExtractor.cpp  ParasiticExtractor.h  ParasiticReducer.cpp  ParasiticReducer.h  PercChecker.cpp  PercChecker.h
vibes/aurora-eda/src/geom/: CMakeLists.txt  GeomBox.cpp  GeomBox.h  GeomOps.cpp  GeomOps.h  GeomPath.cpp  GeomPath.h  GeomPoint.cpp  GeomPoint.h  GeomPolygon.cpp  GeomPolygon.h
vibes/aurora-eda/src/layout/: CMakeLists.txt  ImportWizard.cpp  ImportWizard.h  LayCifIo.cpp  LayCifIo.h  LayDefReader.cpp  LayDefReader.h  LayDefWriter.cpp  LayDefWriter.h  LayDocument.cpp  LayDocument.h  LayDxfWriter.cpp  LayDxfWriter.h  LayEditorController.cpp  LayEditorController.h  LayGdsReader.cpp  LayGdsReader.h  LayGdsWriter.cpp  LayGdsWriter.h  LayImageExport.cpp  LayImageExport.h  LayLefReader.cpp  LayLefReader.h  LayLefWriter.cpp  LayLefWriter.h  LayOasisReader.cpp  LayOasisReader.h  LayOasisWriter.cpp  LayOasisWriter.h  LayTool.cpp  LayTool.h  LayToolGuardRing.cpp  LayToolGuardRing.h  LayToolPath.cpp  LayToolPath.h  LayToolPolygon.cpp  LayToolPolygon.h  LayToolRect.cpp  LayToolRect.h  LayToolRuler.cpp  (+9 more)
vibes/aurora-eda/src/netlist/: CMakeLists.txt  CdlGenerator.cpp  CdlGenerator.h  DspfGenerator.cpp  DspfGenerator.h  NetlistGenerator.cpp  NetlistGenerator.h  SpiceImporter.cpp  SpiceImporter.h  VerilogGenerator.cpp  VerilogGenerator.h  VerilogImporter.cpp  VerilogImporter.h
vibes/aurora-eda/src/pdk/: CMakeLists.txt  Cdf.cpp  Cdf.h  MosPcell.cpp  MosPcell.h  PcellDescriptor.h  PcellEvalCache.cpp  PcellEvalCache.h  PcellLibrary.cpp  PcellLibrary.h  PcellRegistry.cpp  PcellRegistry.h  PdkManager.cpp  PdkManager.h
vibes/aurora-eda/src/plugins/: CMakeLists.txt
vibes/aurora-eda/src/python/: Bindings.cpp  CMakeLists.txt  PythonAvailability.cpp  PythonPcellBridge.cpp  PythonPcellBridge.h
vibes/aurora-eda/src/schematic/: CMakeLists.txt  SchDocument.cpp  SchDocument.h  SchEditorController.cpp  SchEditorController.h  SchSymbol.cpp  SchSymbol.h  SchTool.cpp  SchTool.h  SchToolBusRip.cpp  SchToolBusRip.h  SchToolInstance.cpp  SchToolInstance.h  SchToolLabel.cpp  SchToolLabel.h  SchToolProbe.cpp  SchToolProbe.h  SchToolSelect.cpp  SchToolSelect.h  SchToolStimulus.cpp  SchToolStimulus.h  SchToolSymbolPin.cpp  SchToolSymbolPin.h  SchToolWire.cpp  SchToolWire.h  SchWire.cpp  SchWire.h
vibes/aurora-eda/src/sim/: CMakeLists.txt  SimResult.h  SimRunner.cpp  SimRunner.h
vibes/aurora-eda/src/tech/: CMakeLists.txt  TechDatabase.cpp  TechDatabase.h
vibes/aurora-eda/src/ui/: AppMain.cpp  AppMainStub.cpp  CMakeLists.txt  CellBrowserDialog.cpp  CellBrowserDialog.h  DrcResultsDialog.cpp  DrcResultsDialog.h  ExpressionDialog.cpp  ExpressionDialog.h  LayerPaletteWidget.cpp  LayerPaletteWidget.h  LayoutViewWidget.cpp  LayoutViewWidget.h  MainWindow.cpp  MainWindow.h  ParameterDialog.cpp  ParameterDialog.h  PropertyEditorWidget.cpp  PropertyEditorWidget.h  SchematicViewWidget.cpp  SchematicViewWidget.h  SimSetupDialog.cpp  SimSetupDialog.h  UiAvailability.cpp  WaveformViewWidget.cpp  WaveformViewWidget.h
vibes/aurora-eda/tests/: CMakeLists.txt
vibes/aurora-eda/tests/db/: DbSmokeTest.cpp
vibes/aurora-eda/tests/drc_lvs/: DrcEngineTest.cpp
vibes/vibed-ui/: .gitignore  CMakeLists.txt  CURRENT_STATUS.md  MASTER_INSTRUCTIONS.md  README.md  build.bat  build.sh
vibes/vibed-ui/.claude/: settings.local.json
vibes/vibed-ui/examples/: CMakeLists.txt  demo_basic.cpp  demo_button_lab.cpp  demo_controls.cpp  demo_event_inspector.cpp  demo_file_manager.cpp  demo_shell_preview.cpp  demo_text_editor.cpp
vibes/vibed-ui/src/: CMakeLists.txt
vibes/vibed-xp/: CMakeLists.txt  DIRECTORY.MD  LICENSE  README  build.sh  xp-desktop.desktop
vibes/vibed-xp/src/: main.c  notepad.c  render.c  server.h
(+392 files in other folders)
