[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyforge"
version = "0.1.0"
description = "A local AI studio built with Python and Tkinter."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "PyForge" }
]
license = { text = "MIT" }
keywords = ["ai", "tkinter", "task", "studio"]
classifiers = [
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

dependencies = [
  "customtkinter>=5.4.0",
  "numpy>=1.26.0",
  "Pillow>=10.0.0",
  "torch>=2.0.0",
  "diffusers>=0.26.0",
  "transformers>=4.40.0",
  "accelerate>=0.20.0",
  "faster-whisper>=0.4.0",
  "pyinstaller>=5.11.0",
  "requests>=2.31.0",
]

[project.scripts]
pyforge = "main:run"

[tool.setuptools.packages.find]
where = ["."]
