add_executable(aurora_netlist_test netlist/NetlistGeneratorTest.cpp)
target_link_libraries(aurora_netlist_test PRIVATE aurora_core)
target_compile_features(aurora_netlist_test PRIVATE cxx_std_20)
add_test(NAME aurora_netlist_test COMMAND aurora_netlist_test)

add_executable(aurora_db_smoke db/DbSmokeTest.cpp)
target_link_libraries(aurora_db_smoke PRIVATE aurora_core)
target_compile_features(aurora_db_smoke PRIVATE cxx_std_20)

add_executable(aurora_geom_ops_test geom/GeomOpsTest.cpp)
target_link_libraries(aurora_geom_ops_test PRIVATE aurora_core)
target_compile_features(aurora_geom_ops_test PRIVATE cxx_std_20)

add_executable(aurora_tech_database_test tech/TechDatabaseTest.cpp)
target_link_libraries(aurora_tech_database_test PRIVATE aurora_core)
target_compile_features(aurora_tech_database_test PRIVATE cxx_std_20)

add_test(NAME aurora_db_smoke COMMAND aurora_db_smoke)
add_test(NAME aurora_geom_ops_test COMMAND aurora_geom_ops_test)
add_test(NAME aurora_tech_database_test COMMAND aurora_tech_database_test)

add_executable(aurora_gds_writer_test layout/LayGdsWriterTest.cpp)
target_link_libraries(aurora_gds_writer_test PRIVATE aurora_layout)
target_compile_features(aurora_gds_writer_test PRIVATE cxx_std_20)
add_test(NAME aurora_gds_writer_test COMMAND aurora_gds_writer_test)

add_executable(aurora_drc_lvs_test drc_lvs/DrcEngineTest.cpp)
target_link_libraries(aurora_drc_lvs_test PRIVATE aurora_core)
target_compile_features(aurora_drc_lvs_test PRIVATE cxx_std_20)
add_test(NAME aurora_drc_lvs_test COMMAND aurora_drc_lvs_test)

add_executable(aurora_sim_test sim/SimRunnerTest.cpp)
target_link_libraries(aurora_sim_test PRIVATE aurora_core)
target_compile_features(aurora_sim_test PRIVATE cxx_std_20)
add_test(NAME aurora_sim_test COMMAND aurora_sim_test)
